# Forseti_Service

./: .gitignore  README.md
forseti-service/: Cargo.toml
forseti-service/src/: main.rs
forseti-service/src/models/: file_version.rs  invitations.rs  mod.rs  team.rs
forseti-service/src/routes/: auth_routes.rs  file_routes.rs  invitation_routes.rs  mod.rs  team_routes.rs  version_routes.rs
forseti-service/src/services/: file_version_service.rs
forseti-service/src/tests/: version_tests.rs
forseti-service/src/utils/: file_lock.rs  invitation_storage.rs  mod.rs  version_control.rs
