[package]
name = "forseti-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3"
bcrypt = "0.14"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
futures = "0.3"
derive_more = "0.99"

[dev-dependencies]
actix-rt = "2.8"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"

